[package]
name = "you_finna_lose_jamie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.10"
wgpu = "0.13"
log = "0.4"
winit = "0.26"
env_logger = "0.9"
pollster = "0.2"
glam = "0.21.3"

